--- a/auth/auth.yaml
+++ b/auth/auth.yaml
@@ -20,6 +20,7 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 3000
+      dnsPolicy: ClusterFirst
           
 ---
 
