--- a/auth/auth.yaml
+++ b/auth/auth.yaml
@@ -29,10 +29,9 @@ kind: Service
 metadata:
   name: auth
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-    - nodePort: 30000
-      port: 3000
+    - port: 3000
       protocol: TCP
       targetPort: 3000
   selector:
