--- a/exercise-verifier/exercise-verifier.yaml
+++ b/exercise-verifier/exercise-verifier.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: exercise-verifier
 spec:
-  replicas: 1
+  replicas: 2
   selector: 
     matchLabels:
       app: exercise-verifier
@@ -28,10 +28,9 @@ kind: Service
 metadata:
   name: exercise-verifier
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-    - nodePort: 30002
-      port: 10000
+    - port: 10000
       protocol: TCP
       targetPort: 10000
   selector:
