--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,14 +7,14 @@ spec:
   - host: revuppaal.test
     http:
       paths:
-      - path: /
+      - path: /auth
         pathType: Prefix
         backend:
           service:
             name: auth
             port:
               number: 3000
-      - path: /website-provider
+      - path: /
         pathType: Prefix
         backend:
           service:
