--- a/secrets/db_secret.yaml
+++ b/secrets/db_secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: DBSecret
+  name: dbsecret
 type: Opaque
 data: 
-  db_name: 
-  db_user: 
-  db_pass: 
+  db_name: dXNlcl9kYXRhX2Ri
+  db_user: dXNlcg==
+  db_pass: cGFzc3cwcmQxMjQ=
