--- a/google-verifier/Dockerfile
+++ b/google-verifier/Dockerfile
@@ -2,13 +2,17 @@ FROM node:alpine
 
 RUN mkdir -p /home/appuser/app
 
-RUN npm install npm@latest -g
-
 WORKDIR /home/appuser/app
 
-COPY requirements.txt requirements.txt
+RUN npm install npm@latest -g
 
-RUN cat requirements.txt | xargs npm install -g
+RUN npm install express
+
+RUN npm install google-auth-library
+
+# COPY requirements.txt requirements.txt
+
+# RUN cat requirements.txt | xargs npm install -g
 
 COPY . .
 
