added ssl support

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
   name: my-ingress
 spec:
+  tls:
+    - hosts:
+        - revuppaal.dk
+      secretName: ssl
   rules:
   - host: revuppaal.dk
     http:
